# tasmota-auto-updater

./: .dockerignore  .env.dev  .env.production.example  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  app.py  compose.example.yml  compose.yml  devices-dev.yaml  devices.yaml  docker-hub-description.md  gunicorn.conf.py  mkdocs.yml  production.env.example  pyproject.toml  release-please-config.json  requirements-test.txt  requirements.lock.txt  requirements.txt  server.py  tasmota_updater.py  wsgi.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  dependency-review.yml  deploy-docs.yml  publish-container.yml  release-please.yml  tests.yml  update-dockerhub-description.yml
.windsurf/workflows/: create-pr.md  generate-commit-message.md  new-bugfix-branch.md  new-feature-branch.md  release-version.md
app/: __init__.py  version.py
app/static/css/: styles.css
app/static/js/: app.js
app/tasmota/: __init__.py  api.py  jobs.py  updater.py  utils.py
app/templates/: index.html
docs/: api.md  cli-usage.md  configuration.md  container-setup.md  contributing.md  development.md  index.md  installation.md  troubleshooting.md  web-interface.md
docs/audit-2026-07/: implementation-plan.md
reports/: SECURITY_HARDENING_REPORT.md
tests/: conftest.py  test_api_timeout.py  test_api_timeout_simple.py  test_auth_gate.py  test_cli_deprecated.py  test_container_timeout.py  test_edge_cases_boundary.py  test_frontend_visual_feedback.py  test_integration_coordination.py  test_jobs.py  test_jobs_api.py  test_performance_load.py  test_suite_runner.sh  test_timeout_comprehensive.py  test_timeout_handling.py
tests/e2e/: conftest.py  test_auth_flow.py  test_smoke.py  test_update_flow.py  test_update_refreshes_card.py
tests/fixtures/: test_data.py
tools/testing/: quality_assurance.py  run_tests.py  test_report_generator.py
