[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasmota-updater"
version = "0.4.0"
description = "Web-based Tasmota firmware updater with enhanced timeout handling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tasmota Updater Contributors"},
]
keywords = ["tasmota", "firmware", "update", "iot", "esp32", "esp8266"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "flask-cors>=6.0.1",
    "flasgger>=0.9.7.1",
    "marshmallow>=4.0.1",
    "watchdog>=6.0.0",
    "python-dotenv>=1.2.1",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.32.5",
    "types-pyyaml>=6.0.3",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.82.0",
]

[project.urls]
Homepage = "https://github.com/arendst/tasmota"
Repository = "https://github.com/arendst/tasmota"
Issues = "https://github.com/arendst/tasmota/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "browser: requires a real browser/Selenium WebDriver (excluded in CI)",
    "docker: requires a Docker daemon / testcontainers (excluded in CI)",
    "e2e: Playwright browser end-to-end tests (run in a separate CI job, not the unit job)",
    "stale: known-outdated vs current code, pending repair (excluded in CI)",
    "boundary: boundary-value tests",
    "security: security-focused input-validation tests",
    "edge_cases: edge-case tests",
    "coordination: multi-component coordination tests",
    "container: container/gunicorn runtime tests",
    "infrastructure: infrastructure-level tests",
    "performance: performance tests",
    "load: load tests",
    "resource: resource-usage tests",
    "stress: stress tests",
    "frontend: frontend tests",
    "visual_feedback: visual-feedback frontend tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise-without-from-inside-except
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "flask_restful.*",
    "flasgger.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[dependency-groups]
test = [
    "allure-pytest>=2.13.0",
    "bandit>=1.7.5",
    "black>=23.7.0",
    "cerberus>=1.3.5",
    "cosmic-ray>=8.3.6",
    "coverage[toml]>=7.2.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "freezegun>=1.2.0",
    "httpx>=0.24.0",
    "hypothesis>=6.82.0",
    "jsonschema>=4.19.0",
    "memory-profiler>=0.60.0",
    "mimesis>=10.1.0",
    "mutmut>=2.4.0",
    "mypy>=1.5.0",
    "pip-audit>=2.6.0",
    "psutil>=5.9.0",
    "py-spy>=0.3.14",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-doctestplus>=1.0.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "pytest-html>=3.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-metadata>=3.0.0",
    "pytest-mock>=3.11.0",
    "pytest-parallel>=0.1.1",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "python-dotenv>=1.2.1",
    "requests-mock>=1.11.0",
    "responses>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.0.280",
    "safety>=2.3.0",
    "selenium>=4.11.0",
    "testcontainers>=3.7.0",
    "types-pyyaml>=6.0.3",
    "types-requests>=2.32.5",
    "types-setuptools>=68.0.0",
    "webdriver-manager>=3.9.0",
]
